# async_udp_chat

./: README.md  main.py  pyproject.toml  udp_gui_client.py  udp_peer.py  udp_server.py
src/async_udp_chat/: __init__.py  udp_client.py  udp_gui_client.py  udp_peer.py
