[project]
name = "async-udp-chat"
version = "0.1.0"
description = "Async UDP Chat: peer, server-client, wx GUI mode"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[project.optional-dependencies]
gui = [
    "wxasync>=0.49",
    "wxpython>=4.2.4",
]

[project.scripts]
AsyncUDPChat = "main:run"
